@@ -954,6 +954,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-backgrounds">
+    <version release="HEAD">
+      <component name="gnome-backgrounds" dir="gnome-backgrounds" group="extras">
+        <podir dir="po"/>
+        <potname name="gnome-backgrounds.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-backup">
     <version release="HEAD">
       <component name="gnome-backup" dir="gnome-backup" group="extras">
