@@ -1,5 +1,9 @@
 2004-11-15  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added gnome-backgrounds to extras.
+
+2004-11-15  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: gok has been branched.
 
 2004-11-14  Christian Rose  <menthos@menthos.com>
